crates/cctui-tui/src/snapshots/cctui__view_snapshots__attach_prompt_with_candidates.snap
---
source: crates/cctui-tui/src/view_snapshots.rs
assertion_line: 595
expression: render_screen(&mut app)
---
 infra (main) on orion ── opus ── $1.25
∴ thinking (2 lines)  (2 more · o)                                                                 ▕
 Read  crates/cctui-tui/src/main.rs  read                                                          ▕
└ 984 lines                                                                                        ▕
 Bash  cargo test  write                                                                           ▕
└ ✗ exit 101 · 3 failed  (2 more · o)                                                              ▐
                                                                                                   ▐
● Assistant                                                                                        ▐
Looking at the views first.                                                                        ▐
  ┌ Attach a file — Tab completes, Enter attaches ───────────────────────────────────────────────┐ ▐
- │> /home/dev/cctui/src/a_                                                                      │ ▐
- │action.rs  attach.rs  attention.rs                                                            │ ▐
⏱ │                                                                                              │ ▐
⏱ └──────────────────────────────────────────────────────────────────────────────────────────────┘ ▐
                                                                                                   ▐
◆ lane-b                                                                                           ▐
the parser lane is rebased                                                                         ▐
· keep-alive tick                                                                                  ▐
⟳ context reset (/clear)                                                                           ▐
                                                                                                   ▐
◁ Reply done                                                                                       ▐
────────────────────────────────────────────────────────────────────────────────────────────────────
 ◆ waiting for input
❯  Type a message...
