crates/cctui-tui/src/snapshots/cctui__view_snapshots__bookmarks_edit_prompt.snap
---
source: crates/cctui-tui/src/view_snapshots.rs
expression: render_screen(&mut app)
---
 cctui  v0.0.0-test  ● ~3 live  ▪ 0/0 machines  $0.00 today  ! 1 need input — Ctrl+g
 1 Sessions  2 Bookmarks  3 Overview  4 Access  5 Accounts  6 Settings
 3 saved
❯ ◈ Gateway fix summary              fix-auth · 2d 0h   > keep for release notes
  ◈ (dead) Old plan                  — · 9d 0h
  ◈ Auth rollout checklist           cctui · 14d 0h     > auth, step by step






────────────────────────────────────────────────────────────────────────────────────────────────────
# Gateway fix summary
> keep for release notes

## Gateway fix summary

The saved body, with a code span and a list:

- one
- two
 note keep for release notes▏  Tab title/note · Enter save · Esc cancel
 1-9 Switch view  ? Help  q Quit
