crates/cctui-tui/src/snapshots/cctui__view_snapshots__bookmarks_empty.snap
---
source: crates/cctui-tui/src/view_snapshots.rs
expression: render_screen(&mut app)
---
 cctui  v0.0.0-test  ● ~3 live  ▪ 0/0 machines  $0.00 today  ! 1 need input — Ctrl+g
 1 Sessions  2 Bookmarks  3 Overview  4 Access  5 Accounts  6 Settings
 0 saved
 nothing saved yet — bookmark a message from the web UI








────────────────────────────────────────────────────────────────────────────────────────────────────










 1-9 Switch view  ? Help  q Quit
