crates/cctui-tui/src/snapshots/cctui__view_snapshots__bookmarks_list.snap
---
source: crates/cctui-tui/src/view_snapshots.rs
assertion_line: 119
expression: render_screen(&mut app)
---
 cctui  v0.0.0-test  ● ~3 live  ▪ 0/0 machines  $0.00 today  ! 1 need input — Ctrl+g
 1 Sessions  2 Bookmarks  3 Overview  4 Machines  5 Access  6 Accounts  7 Settings
 3 saved
❯ ◈ Gateway fix summary              fix-auth · 2d 0h   > keep for release notes
  ◈ (dead) Old plan                  — · 9d 0h
  ◈ Auth rollout checklist           cctui · 14d 0h     > auth, step by step






────────────────────────────────────────────────────────────────────────────────────────────────────
# Gateway fix summary
> keep for release notes

## Gateway fix summary

The saved body, with a code span and a list:

- one
- two

 1-9 Switch view  ? Help  q Quit
