crates/cctui-tui/src/snapshots/cctui__view_snapshots__bookmarks_search_highlights_the_terms.snap
---
source: crates/cctui-tui/src/view_snapshots.rs
assertion_line: 137
expression: render_screen(&mut app)
---
 cctui  v0.0.0-test  ● ~3 live  ▪ 0/0 machines  $0.00 today  ! 1 need input — Ctrl+g
 1 Sessions  2 Bookmarks  3 Overview  4 Machines  5 Access  6 Accounts  7 Settings
 1 saved
❯ ◈ Auth rollout checklist           cctui · 14d 0h     > auth, step by step








────────────────────────────────────────────────────────────────────────────────────────────────────
# Auth rollout checklist
> auth, step by step

## Auth rollout checklist

The saved body, with a code span and a list:

- one
- two
 search auth▏  Enter search · Esc cancel
 1-9 Switch view  ? Help  q Quit
