crates/cctui-tui/src/snapshots/cctui__view_snapshots__bookmarks_view_awaiting_its_feature.snap
---
source: crates/cctui-tui/src/view_snapshots.rs
expression: render_screen(&mut app)
---
 cctui  v0.0.0-test  ● 3 live  ⚠ 1 need you  ▪ 1/2 machines  $0.00 today
 1 Sessions  2 Bookmarks  3 Overview  4 Access  5 Accounts  6 Settings
 no bookmarks yet




















 1-9 Switch view  ? Help  q Quit
