crates/cctui-tui/src/snapshots/cctui__view_snapshots__composer_session_mention_popup.snap
---
source: crates/cctui-tui/src/view_snapshots.rs
expression: render_screen(&mut app)
---
 infra (main) on orion ── opus ── $1.25
∴ thinking (2 lines)  (2 more · o)                                                                 ▕
 Read  crates/cctui-tui/src/main.rs  read                                                          ▕
└ 984 lines                                                                                        ▕
 Bash  cargo test  write                                                                           ▕
└ ✗ exit 101 · 3 failed  (2 more · o)                                                              ▐
                                                                                                   ▐
● Assistant                                                                                        ▐
Looking at the views first.                                                                        ▐
                                                                                                   ▐
- one                                                                                              ▐
- two                                                                                              ▐
⏱ 12.4k in / 1.1k out                                                                              ▐
⏱ 38s                                                                                              ▐
                                                                                                   ▐
◆ lane-b                                                                                           ▐
the parser lane is rebased                                                                         ▐
· keep-alive tick                                                                                  ▐
┌ #session ────────────────────────────────────────────────┐                                       ▐
│❯ s-working  cctui                                        │                                       ▐
│  s-child  cctui-sub                                      │                                       ▐
│  s-done  notes                                           │───────────────────────────────── draft
└──────────────────────────────────────────────────────────┘
❯ ping #
