crates/cctui-tui/src/snapshots/cctui__view_snapshots__conversation.snap
---
source: crates/cctui-tui/src/view_snapshots.rs
expression: render_screen(&mut app)
---
 infra (main) on orion ── opus ── $1.25


❯ You
add a snapshot harness


● Assistant
Looking at the views first.

- one
- two
 Read  crates/cctui-tui/src/main.rs
→ 984 lines
⟳ context reset (/clear · /compact)

◁ Reply done





────────────────────────────────────────────────────────────────────────────────────────────────────
❯  Type a message...
