crates/cctui-tui/src/snapshots/cctui__view_snapshots__conversation_ask_card.snap
---
source: crates/cctui-tui/src/view_snapshots.rs
expression: render_screen(&mut app)
---
 infra (main) on orion ── opus ── $1.25 ── ?
Looking at the views first.                                                                        ▕
                                                                                                   ▕
- one                                                                                              ▕
- two                                                                                              ▕
⏱ 12.4k in / 1.1k out                                                                              ▕
⏱ 38s                                                                                              ▕
                                                                                                   ▕
◆ lane-b                                                                                           ▐
the parser lane is rebased                                                                         ▐
· keep-alive tick                                                                                  ▐
⟳ context reset (/clear)                                                                           ▐
                                                                                                   ▐
◁ Reply done                                                                                       ▐
┌ Question 1/2 ─ Which database? ──────────────────────────────────────────────────────────────────┐
│ Storage                                                                                          │
│ ▸ [ ] 1 Postgres  (the default)                                                                  │
│   [ ] 2 SQLite                                                                                   │
│   [ ] o Other:                                                                                   │
│ ↑↓/1-9 pick  space toggle  o other  Tab next  Esc later                                          │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
────────────────────────────────────────────────────────────────────────────────────────────────────
 ◆ waiting for input
❯  Type a message...
